// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Search renders disabled 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-hMtawp hjSYqF"
      disabled={true}
    >
      <label
        className="sc-eEXVIU gehFDh"
      >
        medium
      </label>
      <input
        className="sc-jSPclO fBRZSW"
        disabled={true}
        placeholder=" "
        type="search"
        value="Text"
      />
      <p
        className="sc-bKOxAn dpikAc"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hMtawp hjSYqF"
      disabled={true}
    >
      <label
        className="sc-eEXVIU gehFDh"
      >
        large
      </label>
      <input
        className="sc-jSPclO hUvnrR"
        disabled={true}
        placeholder=" "
        type="search"
        value="Text"
      />
      <p
        className="sc-bKOxAn dpikAc"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hMtawp hjSYqF"
      disabled={true}
    >
      <div
        className="sc-jjavrh cacemr"
      >
        <input
          className="sc-jSPclO cbdmRr"
          disabled={true}
          placeholder=" "
          type="search"
          value="Text"
        />
        <label
          className="sc-gbFqDM fiOBHp"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-bKOxAn dpikAc"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Search renders error 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <label
        className="sc-eEXVIU gehFDh"
      >
        medium
      </label>
      <input
        className="sc-jSPclO hzEpJE"
        placeholder="e.g. EPL"
        type="search"
      />
      <p
        className="sc-bKOxAn JIYmc"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <label
        className="sc-eEXVIU gehFDh"
      >
        large
      </label>
      <input
        className="sc-jSPclO iSsDGf"
        placeholder="e.g. EPL"
        type="search"
      />
      <p
        className="sc-bKOxAn JIYmc"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <div
        className="sc-jjavrh cacemr"
      >
        <input
          className="sc-jSPclO exYPQF"
          placeholder="e.g. EPL"
          type="search"
        />
        <label
          className="sc-gbFqDM fiOBHp"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-bKOxAn JIYmc"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Search renders readOnly 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <label
        className="sc-eEXVIU gehFDh"
      >
        medium
      </label>
      <input
        className="sc-jSPclO fBRZSW"
        placeholder=" "
        readOnly={true}
        type="search"
        value="Read only text"
      />
      <p
        className="sc-bKOxAn dpikAc"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <label
        className="sc-eEXVIU gehFDh"
      >
        large
      </label>
      <input
        className="sc-jSPclO hUvnrR"
        placeholder=" "
        readOnly={true}
        type="search"
        value="Read only text"
      />
      <p
        className="sc-bKOxAn dpikAc"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <div
        className="sc-jjavrh cacemr"
      >
        <input
          className="sc-jSPclO cbdmRr"
          placeholder=" "
          readOnly={true}
          type="search"
          value="Read only text"
        />
        <label
          className="sc-gbFqDM fiOBHp"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-bKOxAn dpikAc"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Search renders with hint 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <label
        className="sc-eEXVIU gehFDh"
      >
        medium
      </label>
      <input
        className="sc-jSPclO fBRZSW"
        placeholder="e.g. EPL"
        type="search"
      />
      <p
        className="sc-bKOxAn dpikAc"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <label
        className="sc-eEXVIU gehFDh"
      >
        large
      </label>
      <input
        className="sc-jSPclO hUvnrR"
        placeholder="e.g. EPL"
        type="search"
      />
      <p
        className="sc-bKOxAn dpikAc"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <div
        className="sc-jjavrh cacemr"
      >
        <input
          className="sc-jSPclO cbdmRr"
          placeholder="e.g. EPL"
          type="search"
        />
        <label
          className="sc-gbFqDM fiOBHp"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-bKOxAn dpikAc"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Search renders with label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <label
        className="sc-eEXVIU gehFDh"
      >
        medium
      </label>
      <input
        className="sc-jSPclO fBRZSW"
        placeholder="e.g. EPL"
        type="search"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <label
        className="sc-eEXVIU gehFDh"
      >
        large
      </label>
      <input
        className="sc-jSPclO hUvnrR"
        placeholder="e.g. EPL"
        type="search"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <div
        className="sc-jjavrh cacemr"
      >
        <input
          className="sc-jSPclO cbdmRr"
          placeholder="e.g. EPL"
          type="search"
        />
        <label
          className="sc-gbFqDM fiOBHp"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Search renders with label RTL 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <label
        className="sc-eEXVIU gehFDh"
        dir="rtl"
      >
        medium
      </label>
      <input
        className="sc-jSPclO fBRZSW"
        dir="rtl"
        placeholder="e.g. EPL"
        type="search"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <label
        className="sc-eEXVIU gehFDh"
        dir="rtl"
      >
        large
      </label>
      <input
        className="sc-jSPclO hUvnrR"
        dir="rtl"
        placeholder="e.g. EPL"
        type="search"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <div
        className="sc-jjavrh cacemr"
      >
        <input
          className="sc-jSPclO cbdmRr"
          dir="rtl"
          placeholder="e.g. EPL"
          type="search"
        />
        <label
          className="sc-gbFqDM jHsxVm"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Search renders without label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <input
        className="sc-jSPclO fBRZSW"
        placeholder="medium"
        type="search"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <input
        className="sc-jSPclO hUvnrR"
        placeholder="large"
        type="search"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <div
        className="sc-jjavrh cacemr"
      >
        <input
          className="sc-jSPclO ipVsRy"
          placeholder="xlarge"
          type="search"
        />
        <label
          className="sc-gbFqDM fiOBHp"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Search supports background colour 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <label
        className="sc-eEXVIU gehFDh"
      >
        medium
      </label>
      <input
        className="sc-jSPclO IYUVx"
        placeholder="e.g. EPL"
        type="search"
      />
      <p
        className="sc-bKOxAn dpikAc"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <label
        className="sc-eEXVIU gehFDh"
      >
        large
      </label>
      <input
        className="sc-jSPclO dfTCla"
        placeholder="e.g. EPL"
        type="search"
      />
      <p
        className="sc-bKOxAn dpikAc"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <div
        className="sc-jjavrh kXEagA"
      >
        <input
          className="sc-jSPclO cbdmRr"
          placeholder="e.g. EPL"
          type="search"
        />
        <label
          className="sc-gbFqDM fiOBHp"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-bKOxAn dpikAc"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;
